# end-to-end-mlops-aws

./: .pdm-python  README.md  main.py  pyproject.toml  setup.py  setup_env.sh
src/mlProject/utils/: common.py
