[project]
name = "mlProject"
version = "0.0.0"
description = "Default template for PDM package"
authors = [
    {name = "gregorywmorris", email = "gwm1980@gmail.com"},
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pandas",
    "mlflow==2.2.2",
    "notebook",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "python-box==6.0.2",
    "pyYAML",
    "tqdm",
    "ensure==1.0.2",
    "joblib",
    "types-PyYAML",
    "Flask",
    "Flask-Cors",
]

[project.urls]
homepage = "https://github.com/gregorywmorris/End-to-end-ML-Project-with-MLflow"
bug-tracker = "https://github.com/gregorywmorris/End-to-end-ML-Project-with-MLflow/issues"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/#egg=mlProject"]
